# fused-workloads

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  readme.rst  sourceme
aes/: CMakeLists.txt  TI_aes_128_encr_only.c  lipsum.h
cmake/: InstallDependencies.cmake  cm0-toolchain.cmake  common.cmake  msp430-toolchain.cmake  tail.cmake  toolchain.cmake
dijkstra/: CMakeLists.txt  dijkstra_small.c  dijkstra_small.h  main.c
fp/: CMakeLists.txt  fp.c
matmul/: CMakeLists.txt  generate-reference-output.c  input.h  matmul.c  reference-output.txt  refgen
matmul-tiled/: CMakeLists.txt  input_short.h  matmul-tiled.c  meas.gdb  parse-traces.py  sim.gdb  trace.gdb
nettle-sha256/: CMakeLists.txt  main.c  nettle-sha256.c
newlib-exp/: CMakeLists.txt  ef_exp.c
newlib-log/: CMakeLists.txt  ef_log.c
newlib-mod/: CMakeLists.txt  ef_mod.c
newlib-sqrt/: CMakeLists.txt  ef_sqrt.c
sglib-arraybinsearch/: CMakeLists.txt  arraybinsearch.c  main.c
sglib-arrayheapsort/: CMakeLists.txt
sglib-arrayquicksort/: CMakeLists.txt  arraysort.c  main.c
sglib-arraysort/: sglib.h
sglib-dllist/: CMakeLists.txt  dllist.c  main.c  sglib.h
sglib-hashtable/: CMakeLists.txt  hashtable.c  main.c  sglib.h
sglib-listinsertsort/: CMakeLists.txt  listinsertsort.c  main.c  sglib.h
sglib-listsort/: CMakeLists.txt  listsort.c  sglib.h
sglib-queue/: CMakeLists.txt  main.c  queue.c  sglib.h
sglib-rbtree/: CMakeLists.txt  main.c  rbtree.c  sglib.h
support/: CMakeLists.txt  cm0-FS.ld  cm0-support.c  cm0-support.h  cm0-vectors.c  cm0.ld  cortex-m-generic.ld  fused.h  main.c  msp430-support.c  msp430-support.h  support.h
